fix: add profile image.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
     <div class="center">
         <h1>Dmitry Kulbeda</h1>
         <article>
+            <img src="profile_logo.jpg" alt="profile_logo.jpg">
+
             <p class="email">
                 email: <a href="mailto:iforox@gmail.com">iforox@gmail.com</a> 
-            </p>
+            </p>            
+
             <p class="phone">
                 +375 29 162 85 24
             </p>
+
             <p class="skills">
                 Future Front End Developer on React framework.
             </p>
+
             <p class="education">
                 All my future code will be here on my github profile and also in 5 months I'll get Diploma of Engineer-Programmer.
             </p>
+            
             <p class="english">
                 My English level is B2.
             </p>
