--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <img src="profile_logo.jpg" alt="profile_logo.jpg">
 
             <p class="email">
-                email: <a href="mailto:iforox@gmail.com">iforox@gmail.com</a> 
+                <strong>email: </strong><a href="mailto:iforox@gmail.com">iforox@gmail.com</a> 
             </p>            
 
             <p class="phone">
-                +375 29 162 85 24
+                <strong>+375 29 162 85 24</strong>                
             </p>
 
             <p class="skills">
