--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>HTML & CSS & GIT</title>
 </head>
+
 <body>
     <div class="center">
         <h1>Dmitry Kulbeda</h1>
@@ -13,26 +15,27 @@
             <img src="profile_logo.jpg" alt="profile_logo.jpg">
 
             <p class="email">
-                <strong>email: </strong><a href="mailto:iforox@gmail.com">iforox@gmail.com</a> 
-            </p>            
+                <strong>email: </strong><a href="mailto:iforox@gmail.com">iforox@gmail.com</a>
+            </p>
 
             <p class="phone">
-                <strong>+375 29 162 85 24</strong>                
+                <strong>+375 29 162 85 24</strong>
             </p>
 
             <p class="skills">
-                Future Front End Developer on React framework.
+                Front End Developer (Vanilla JS, React).
             </p>
 
             <p class="education">
-                All my future code will be here on my github profile and also in 5 months I'll get Diploma of Engineer-Programmer.
+                Diploma of Engineer-Programmer.
             </p>
-            
+
             <p class="english">
-                My English level is B2.
+                English level is B2.
             </p>
         </article>
     </div>
-    
+
 </body>
+
 </html>
