--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </a>
             </div>
             <div>
-                <a href="">
+                <a href="https://youtu.be/Lb42gEndlCs">
                     <img src="assets/youtube.svg" alt="YOUTUBE" width="100">
                 </a>
             </div>
